src/objects/Portal_Article__c.object
<CustomObject>
    <description>To store the content (instructions, links, help) that need to be displayed in portal in various pages.</description>
    <fields>
        <fullName>Article_Body__c</fullName>
        <label>Article Body</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Article_Content_Type__c</fullName>
        <label>Article Content Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Button</fullName>
                </value>
                <value>
                    <fullName>Link</fullName>
                </value>
                <value>
                    <fullName>Paragraph</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Article_Link_URL__c</fullName>
        <label>Article Link URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Article_Status__c</fullName>
        <label>Article Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Article_Sub_description__c</fullName>
        <label>Article Sub description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Article_Title__c</fullName>
        <label>Article Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Article_body_sections_to_display__c</fullName>
        <defaultValue>3.0</defaultValue>
        <label>Article body sections to display</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Display_Page__c</fullName>
        <label>Display Page</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Public Home</fullName>
                </value>
                <value>
                    <fullName>Professional</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>ToDo</fullName>
                </value>
                <value>
                    <fullName>Help-Topic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <description>Unique external id for migrating data b/w sandboxes.</description>
        <externalId>true</externalId>
        <inlineHelpText>&lt;Page&gt;-&lt;RecortType&gt;-&lt;Title&gt;
Eg: PUB-ART-SAW-1</inlineHelpText>
        <label>External Id</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Internal_Article_Redirection__c</fullName>
        <inlineHelpText>Populate respective Article&apos;s External Id</inlineHelpText>
        <label>Internal Article Redirection</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_of_Display__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Order of Display</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_Article__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Article</label>
        <referenceTo>Portal_Article__c</referenceTo>
        <relationshipLabel>Related Articles</relationshipLabel>
        <relationshipName>Related_Articles</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Portal Article</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Order_of_Display__c</columns>
        <columns>Article_Content_Type__c</columns>
        <columns>Article_Title__c</columns>
        <columns>External_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Parent_Portal_Articles</fullName>
        <columns>NAME</columns>
        <columns>Article_Title__c</columns>
        <columns>Display_Page__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Article_Status__c</columns>
        <columns>Article_Content_Type__c</columns>
        <columns>Order_of_Display__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Parent_Article__c</field>
            <operation>equals</operation>
        </filters>
        <label>Parent Portal Articles</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>ART-{0000}</displayFormat>
        <label>Article Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Portal Articles</pluralLabel>
    <recordTypes>
        <fullName>Body</fullName>
        <active>true</active>
        <description>Article Body Content</description>
        <label>Body</label>
    </recordTypes>
    <recordTypes>
        <fullName>Footer</fullName>
        <active>true</active>
        <description>Article Footer Content</description>
        <label>Footer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Header</fullName>
        <active>true</active>
        <description>Article Header Content</description>
        <label>Header</label>
    </recordTypes>
    <recordTypes>
        <fullName>Main</fullName>
        <active>true</active>
        <description>Article Placeholder</description>
        <label>Main</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>